--- a/roles/homeserver/meta/main.yml
+++ b/roles/homeserver/meta/main.yml
@@ -49,6 +49,7 @@ galaxy_info:
 
 dependencies:
   - role: usable
+  - role: geerlingguy.docker
   # List your role dependencies here, one per line. Be sure to remove the '[]' above,
   # if you add dependencies to this list.
 
